--- a/_publications/2018-09-01-CSP1.md
+++ b/_publications/2018-09-01-CSP1.md
@@ -1,7 +1,7 @@
 ---
 title: "Modeling and Simulation of a 100 MW Concentrated Solar Thermal Power Plant Using Parabolic Trough Collectors in Pakistan"
 collection: publications
-permalink: /publication/1st
+permalink: /publication/2018-09-01-CSP1
 excerpt: 'This paper is about the number 1. The number 2 is left for future work.'
 date: 2018
 venue: 'IOP Conference Series: Materials Science and Engineering'
