--- a/_publications/2018-09-01-CSP1.md
+++ b/_publications/2018-09-01-CSP1.md
@@ -3,7 +3,7 @@ title: "Modeling and Simulation of a 100 MW Concentrated Solar Thermal Power Pla
 collection: publications
 permalink: /publication/2018-09-01-CSP1
 excerpt: 'This paper is about the number 1. The number 2 is left for future work.'
-date: 2018
+date: 2018-09-01
 venue: 'IOP Conference Series: Materials Science and Engineering'
 paperurl: 'https://doi.org/10.1088/1757-899X/414/1/012032'
 citation: 'K. Liaqat, M. Anss, A. Ali, and A. N. Mengal, “Modeling and Simulation of a 100 MW Concentrated Solar Thermal Power Plant Using Parabolic Trough Collectors in Pakistan,” IOP Conference Series: Materials Science and Engineering, vol. 414, p. 012032, Sep. 2018, doi: 10.1088/1757-899x/414/1/012032.'
