--- a/_publications/2021-09-27-HALOS-Pak.md
+++ b/_publications/2021-09-27-HALOS-Pak.md
@@ -4,7 +4,7 @@ collection: publications
 permalink: /publication/2021-09-27-HALOS-Pak
 excerpt: 'A case study to improve the performance of CSP power plants in Pakistan.'
 date: 2021-09-27
-venue: '27th SolarPACES (Solar Power and Chemical Energy Systems) Conference, 2021'
+venue: '27th SolarPACES (Solar Power and Chemical Energy Systems) Conference'
 paperurl: 'https://www.solarpaces-conference.org/home'
 citation: 'K. Liaqat, A. Zolan, and J. Ordonez. "Heliostat Aimpoint Strategy Development for a Central Receiver System Plant in Pakistani Climate". 27th SolarPACES (Solar Power and Chemical Energy Systems) Conference, 2021'
 ---
