--- a/_publications/2021-10-08-CSP-Comp.md
+++ b/_publications/2021-10-08-CSP-Comp.md
@@ -2,7 +2,7 @@
 title: "Resource Assessment, Parametric Optimization, And Cost Evaluation: A Comparative Study of CSP Power Plants for Pakistan"
 collection: publications
 permalink: /publication/2021-10-08-CSP-Comp
-#excerpt: 'This paper is about a comparative study of different CSP technologies based power plants for Pakistan.'
+excerpt: 'This paper is about a comparative study of different CSP technologies based power plants for Pakistan.'
 date: 2021-10-08
 venue: 'Journal of Renewable and Sustainable Energy (under revisison process)'
 #paperurl: ''
